--- a/index.html
+++ b/index.html
@@ -74,7 +74,14 @@ nav span{
   padding-top:4px;
 }
 
-nav span:hover{ color:#fff; }
+nav span:hover{
+  color:#fff;
+}
+
+nav span.disabled{
+  opacity:0.4;
+  pointer-events:none;
+}
 
 /* ===== SECTIONS ===== */
 .section{
@@ -142,7 +149,9 @@ p{
   transition:.4s;
 }
 
-.project:hover{ transform:translateY(-8px); }
+.project:hover{
+  transform:translateY(-8px);
+}
 
 /* ===== REVEAL ===== */
 .reveal{
@@ -237,40 +246,46 @@ footer{
 <script>
 
 /* ===== ENTRADA ===== */
-window.addEventListener("load",()=>{ document.body.style.opacity="1"; });
+window.addEventListener("load",()=>{
+  document.body.style.opacity="1";
+});
 
 /* ===== CURSOR ===== */
-const c=document.querySelector(".cursor");
+const cursor=document.querySelector(".cursor");
 let mx=0,my=0,x=0,y=0,v=0,lx=0,ly=0;
 
 addEventListener("mousemove",e=>{
-  mx=e.clientX; my=e.clientY;
+  mx=e.clientX;
+  my=e.clientY;
   v=Math.hypot(mx-lx,my-ly);
-  lx=mx; ly=my;
+  lx=mx;
+  ly=my;
 });
 
-(function cursorAnim(){
+(function animateCursor(){
   const s=0.12+Math.min(v*0.02,0.35);
-  x+=(mx-x)*s; y+=(my-y)*s;
-  c.style.left=x+"px"; c.style.top=y+"px";
-  requestAnimationFrame(cursorAnim);
+  x+=(mx-x)*s;
+  y+=(my-y)*s;
+  cursor.style.left=x+"px";
+  cursor.style.top=y+"px";
+  requestAnimationFrame(animateCursor);
 })();
 
 /* ===== HERO TEXT ===== */
-const h=document.getElementById("heroTitle");
-"Industrial Design".split("").forEach((ch,i)=>{
+const hero=document.getElementById("heroTitle");
+"Industrial Design".split("").forEach((char,i)=>{
   const span=document.createElement("span");
-  span.textContent=ch;
+  span.textContent=char;
   span.style.opacity=0;
   span.style.display="inline-block";
   span.style.transform="translateY(40px)";
   span.style.filter="blur(8px)";
   span.style.transition=`all .5s cubic-bezier(.2,.7,.1,1) ${i*0.025}s`;
-  h.appendChild(span);
+  hero.appendChild(span);
 });
 
 setTimeout(()=>{
-  h.querySelectorAll("span").forEach(span=>{
+  hero.querySelectorAll("span").forEach(span=>{
     span.style.opacity=1;
     span.style.transform="translateY(0)";
     span.style.filter="blur(0)";
@@ -279,8 +294,11 @@ setTimeout(()=>{
 
 /* ===== SCROLL REVEAL ===== */
 const observer=new IntersectionObserver(entries=>{
-  entries.forEach(e=>e.isIntersecting&&e.target.classList.add("visible"));
+  entries.forEach(e=>{
+    if(e.isIntersecting) e.target.classList.add("visible");
+  });
 },{threshold:.2});
+
 document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
 
 /* ===== HEADER BLUR ===== */
@@ -295,16 +313,21 @@ addEventListener("scroll",()=>{
   }
 });
 
-/* ===== NAV SCROLL (PRIMER CLIC MÁS ABAJO) ===== */
+/* ===== NAVIGATION (UN SOLO CLIC POR BOTÓN) ===== */
 let firstNavigation=true;
 
 document.querySelectorAll("nav span").forEach(btn=>{
   btn.addEventListener("click",()=>{
 
+    if(btn.classList.contains("disabled")) return;
+
+    btn.classList.add("disabled");
+
     const index=btn.dataset.scroll;
 
     if(index==="0"){
       window.scrollTo({top:0,behavior:"smooth"});
+      firstNavigation=false;
       return;
     }
 
@@ -313,7 +336,7 @@ document.querySelectorAll("nav span").forEach(btn=>{
 
     const firstOffset=220;
     const normalOffset=180;
-    const offset=firstNavigation?firstOffset:normalOffset;
+    const offset=firstNavigation ? firstOffset : normalOffset;
 
     const targetY=
       title.getBoundingClientRect().top +
@@ -328,8 +351,8 @@ document.querySelectorAll("nav span").forEach(btn=>{
 
 /* ===== THREE BACKGROUND ===== */
 const scene=new THREE.Scene();
-const cam=new THREE.PerspectiveCamera(60,innerWidth/innerHeight,.1,100);
-cam.position.z=4;
+const camera=new THREE.PerspectiveCamera(60,innerWidth/innerHeight,.1,100);
+camera.position.z=4;
 
 const renderer=new THREE.WebGLRenderer({alpha:true});
 renderer.setSize(innerWidth,innerHeight);
@@ -338,7 +361,12 @@ document.body.appendChild(renderer.domElement);
 
 const mesh=new THREE.Mesh(
   new THREE.IcosahedronGeometry(1.8,2),
-  new THREE.MeshStandardMaterial({wireframe:true,color:0xffffff,opacity:.05,transparent:true})
+  new THREE.MeshStandardMaterial({
+    wireframe:true,
+    color:0xffffff,
+    opacity:.05,
+    transparent:true
+  })
 );
 scene.add(mesh);
 
@@ -349,14 +377,14 @@ scene.add(light);
 (function animate(){
   mesh.rotation.x+=.0015;
   mesh.rotation.y+=.0015;
-  renderer.render(scene,cam);
+  renderer.render(scene,camera);
   requestAnimationFrame(animate);
 })();
 
 onresize=()=>{
   renderer.setSize(innerWidth,innerHeight);
-  cam.aspect=innerWidth/innerHeight;
-  cam.updateProjectionMatrix();
+  camera.aspect=innerWidth/innerHeight;
+  camera.updateProjectionMatrix();
 };
 
 </script>
