--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@ body{
   transition:opacity 1.2s cubic-bezier(.2,.7,.1,1);
 }
 
-/* ===== BACKGROUND ===== */
 canvas{
   position:fixed;
   inset:0;
@@ -76,11 +75,6 @@ nav span{
 
 nav span:hover{
   color:#fff;
-}
-
-nav span.disabled{
-  opacity:0.4;
-  pointer-events:none;
 }
 
 /* ===== SECTIONS ===== */
@@ -199,14 +193,17 @@ footer{
   </div>
 </section>
 
-<!-- ===== SOBRE MÍ ===== -->
+<!-- ===== SOBRE MI ===== -->
 <section class="section">
   <div class="content-left">
     <h1 class="reveal">Sobre mí</h1>
     <p class="reveal">
-      Ingeniero en diseño industrial de 24 años, con base en Valencia. Formación en la
-      Universitat Politècnica de València (UPV) y Universitat Jaume I (UJI), con FP en electricidad.
-      Interesado en impresión 3D aplicada al prototipado y en el diseño y desarrollo de páginas web.
+      Soy ingeniero en diseño industrial de 24 años, con base en Valencia. He cursado mis estudios
+      en la Universitat Politècnica de València (UPV), tras completar mis primeros años en la
+      Universitat Jaume I (UJI), y cuento además con una formación profesional en electricidad.<br><br>
+      Me considero una persona detallista y organizada, con un alto nivel de exigencia en cada
+      proyecto. Mis principales intereses son la impresión 3D aplicada al prototipado y,
+      actualmente, el diseño y desarrollo de páginas web.
     </p>
   </div>
 </section>
@@ -228,7 +225,8 @@ footer{
   <div class="content-left">
     <h1 class="reveal">CV</h1>
     <p class="reveal">
-      Formación en ingeniería de diseño industrial y experiencia en desarrollo de producto.
+      Formación en ingeniería de diseño industrial, experiencia en desarrollo de producto
+      y diseño técnico.
     </p>
   </div>
 </section>
@@ -246,62 +244,45 @@ footer{
 <script>
 
 /* ===== ENTRADA ===== */
-window.addEventListener("load",()=>{
-  document.body.style.opacity="1";
-});
+window.addEventListener("load",()=>document.body.style.opacity="1");
 
 /* ===== CURSOR ===== */
-const cursor=document.querySelector(".cursor");
+const c=document.querySelector(".cursor");
 let mx=0,my=0,x=0,y=0,v=0,lx=0,ly=0;
-
 addEventListener("mousemove",e=>{
-  mx=e.clientX;
-  my=e.clientY;
-  v=Math.hypot(mx-lx,my-ly);
-  lx=mx;
-  ly=my;
+  mx=e.clientX; my=e.clientY;
+  v=Math.hypot(mx-lx,my-ly); lx=mx; ly=my;
 });
-
-(function animateCursor(){
+(function loop(){
   const s=0.12+Math.min(v*0.02,0.35);
-  x+=(mx-x)*s;
-  y+=(my-y)*s;
-  cursor.style.left=x+"px";
-  cursor.style.top=y+"px";
-  requestAnimationFrame(animateCursor);
+  x+=(mx-x)*s; y+=(my-y)*s;
+  c.style.left=x+"px"; c.style.top=y+"px";
+  requestAnimationFrame(loop);
 })();
 
 /* ===== HERO TEXT ===== */
-const hero=document.getElementById("heroTitle");
-"Industrial Design".split("").forEach((char,i)=>{
-  const span=document.createElement("span");
-  span.textContent=char;
-  span.style.opacity=0;
-  span.style.display="inline-block";
-  span.style.transform="translateY(40px)";
-  span.style.filter="blur(8px)";
-  span.style.transition=`all .5s cubic-bezier(.2,.7,.1,1) ${i*0.025}s`;
-  hero.appendChild(span);
+const h=document.getElementById("heroTitle");
+"Industrial Design".split("").forEach((ch,i)=>{
+  const s=document.createElement("span");
+  s.textContent=ch;
+  s.style.opacity=0;
+  s.style.display="inline-block";
+  s.style.transform="translateY(40px)";
+  s.style.filter="blur(8px)";
+  s.style.transition=`all .5s cubic-bezier(.2,.7,.1,1) ${i*0.025}s`;
+  h.appendChild(s);
 });
-
-setTimeout(()=>{
-  hero.querySelectorAll("span").forEach(span=>{
-    span.style.opacity=1;
-    span.style.transform="translateY(0)";
-    span.style.filter="blur(0)";
-  });
-},200);
+setTimeout(()=>h.querySelectorAll("span").forEach(s=>{
+  s.style.opacity=1;
+  s.style.transform="translateY(0)";
+  s.style.filter="blur(0)";
+}),200);
 
 /* ===== SCROLL REVEAL ===== */
-const observer=new IntersectionObserver(entries=>{
-  entries.forEach(e=>{
-    if(e.isIntersecting) e.target.classList.add("visible");
-  });
-},{threshold:.2});
+const obs=new IntersectionObserver(e=>e.forEach(i=>i.isIntersecting&&i.target.classList.add("visible")),{threshold:.2});
+document.querySelectorAll(".reveal").forEach(el=>obs.observe(el));
 
-document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
-
-/* ===== HEADER BLUR ===== */
+/* ===== HEADER BLUR ON SCROLL ===== */
 addEventListener("scroll",()=>{
   const n=document.querySelector("nav");
   if(scrollY>40){
@@ -313,78 +294,42 @@ addEventListener("scroll",()=>{
   }
 });
 
-/* ===== NAVIGATION (UN SOLO CLIC POR BOTÓN) ===== */
-let firstNavigation=true;
-
+/* ===== NAV SCROLL WITH OFFSET ===== */
 document.querySelectorAll("nav span").forEach(btn=>{
   btn.addEventListener("click",()=>{
-
-    if(btn.classList.contains("disabled")) return;
-
-    btn.classList.add("disabled");
-
-    const index=btn.dataset.scroll;
-
-    if(index==="0"){
-      window.scrollTo({top:0,behavior:"smooth"});
-      firstNavigation=false;
-      return;
-    }
-
-    const section=document.querySelectorAll(".section")[index];
-    const title=section.querySelector("h1");
-
-    const firstOffset=220;
-    const normalOffset=180;
-    const offset=firstNavigation ? firstOffset : normalOffset;
-
-    const targetY=
-      title.getBoundingClientRect().top +
-      window.pageYOffset -
-      offset;
-
-    window.scrollTo({top:targetY,behavior:"smooth"});
-
-    firstNavigation=false;
+    const section=document.querySelectorAll(".section")[btn.dataset.scroll];
+    const header=document.querySelector("nav").offsetHeight;
+    const offset=40; // controla cuánto sube el título
+    const y=section.getBoundingClientRect().top + window.pageYOffset - header - offset;
+    window.scrollTo({top:y,behavior:"smooth"});
   });
 });
 
 /* ===== THREE BACKGROUND ===== */
 const scene=new THREE.Scene();
-const camera=new THREE.PerspectiveCamera(60,innerWidth/innerHeight,.1,100);
-camera.position.z=4;
-
-const renderer=new THREE.WebGLRenderer({alpha:true});
-renderer.setSize(innerWidth,innerHeight);
-renderer.setPixelRatio(Math.min(devicePixelRatio,2));
-document.body.appendChild(renderer.domElement);
-
-const mesh=new THREE.Mesh(
+const cam=new THREE.PerspectiveCamera(60,innerWidth/innerHeight,.1,100);
+cam.position.z=4;
+const r=new THREE.WebGLRenderer({alpha:true});
+r.setSize(innerWidth,innerHeight);
+r.setPixelRatio(Math.min(devicePixelRatio,2));
+document.body.appendChild(r.domElement);
+const m=new THREE.Mesh(
   new THREE.IcosahedronGeometry(1.8,2),
-  new THREE.MeshStandardMaterial({
-    wireframe:true,
-    color:0xffffff,
-    opacity:.05,
-    transparent:true
-  })
+  new THREE.MeshStandardMaterial({wireframe:true,color:0xffffff,opacity:.05,transparent:true})
 );
-scene.add(mesh);
-
-const light=new THREE.PointLight(0xffffff,1);
-light.position.set(5,5,5);
-scene.add(light);
-
-(function animate(){
-  mesh.rotation.x+=.0015;
-  mesh.rotation.y+=.0015;
-  renderer.render(scene,camera);
-  requestAnimationFrame(animate);
+scene.add(m);
+const l=new THREE.PointLight(0xffffff,1);
+l.position.set(5,5,5);
+scene.add(l);
+(function anim3D(){
+  m.rotation.x+=.0015; m.rotation.y+=.0015;
+  r.render(scene,cam);
+  requestAnimationFrame(anim3D);
 })();
-
 onresize=()=>{
-  renderer.setSize(innerWidth,innerHeight);
-  camera.aspect=innerWidth/innerHeight;
-  camera.updateProjectionMatrix();
+  r.setSize(innerWidth,innerHeight);
+  cam.aspect=innerWidth/innerHeight;
+  cam.updateProjectionMatrix();
 };
 
 </script>
