--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body{
   transition:opacity 1.2s cubic-bezier(.2,.7,.1,1);
 }
 
+/* ===== BACKGROUND ===== */
 canvas{
   position:fixed;
   inset:0;
@@ -193,17 +194,14 @@ footer{
   </div>
 </section>
 
-<!-- ===== SOBRE MI ===== -->
+<!-- ===== SOBRE MÍ ===== -->
 <section class="section">
   <div class="content-left">
     <h1 class="reveal">Sobre mí</h1>
     <p class="reveal">
-      Soy ingeniero en diseño industrial de 24 años, con base en Valencia. He cursado mis estudios
-      en la Universitat Politècnica de València (UPV), tras completar mis primeros años en la
-      Universitat Jaume I (UJI), y cuento además con una formación profesional en electricidad.<br><br>
-      Me considero una persona detallista y organizada, con un alto nivel de exigencia en cada
-      proyecto. Mis principales intereses son la impresión 3D aplicada al prototipado y,
-      actualmente, el diseño y desarrollo de páginas web.
+      Soy ingeniero en diseño industrial de 24 años, con base en Valencia. Formación en la
+      Universitat Politècnica de València (UPV) y Universitat Jaume I (UJI), con FP en electricidad.
+      Interesado en impresión 3D aplicada al prototipado y en el diseño y desarrollo de páginas web.
     </p>
   </div>
 </section>
@@ -249,40 +247,55 @@ window.addEventListener("load",()=>document.body.style.opacity="1");
 /* ===== CURSOR ===== */
 const c=document.querySelector(".cursor");
 let mx=0,my=0,x=0,y=0,v=0,lx=0,ly=0;
+
 addEventListener("mousemove",e=>{
   mx=e.clientX; my=e.clientY;
-  v=Math.hypot(mx-lx,my-ly); lx=mx; ly=my;
+  v=Math.hypot(mx-lx,my-ly);
+  lx=mx; ly=my;
 });
-(function loop(){
+
+(function animateCursor(){
   const s=0.12+Math.min(v*0.02,0.35);
-  x+=(mx-x)*s; y+=(my-y)*s;
-  c.style.left=x+"px"; c.style.top=y+"px";
-  requestAnimationFrame(loop);
+  x+=(mx-x)*s;
+  y+=(my-y)*s;
+  c.style.left=x+"px";
+  c.style.top=y+"px";
+  requestAnimationFrame(animateCursor);
 })();
 
 /* ===== HERO TEXT ===== */
 const h=document.getElementById("heroTitle");
 "Industrial Design".split("").forEach((ch,i)=>{
-  const s=document.createElement("span");
-  s.textContent=ch;
-  s.style.opacity=0;
-  s.style.display="inline-block";
-  s.style.transform="translateY(40px)";
-  s.style.filter="blur(8px)";
-  s.style.transition=`all .5s cubic-bezier(.2,.7,.1,1) ${i*0.025}s`;
-  h.appendChild(s);
+  const span=document.createElement("span");
+  span.textContent=ch;
+  span.style.opacity=0;
+  span.style.display="inline-block";
+  span.style.transform="translateY(40px)";
+  span.style.filter="blur(8px)";
+  span.style.transition=`all .5s cubic-bezier(.2,.7,.1,1) ${i*0.025}s`;
+  h.appendChild(span);
 });
-setTimeout(()=>h.querySelectorAll("span").forEach(s=>{
-  s.style.opacity=1;
-  s.style.transform="translateY(0)";
-  s.style.filter="blur(0)";
-}),200);
+
+setTimeout(()=>{
+  h.querySelectorAll("span").forEach(span=>{
+    span.style.opacity=1;
+    span.style.transform="translateY(0)";
+    span.style.filter="blur(0)";
+  });
+},200);
 
 /* ===== SCROLL REVEAL ===== */
-const obs=new IntersectionObserver(e=>e.forEach(i=>i.isIntersecting&&i.target.classList.add("visible")),{threshold:.2});
-document.querySelectorAll(".reveal").forEach(el=>obs.observe(el));
+const observer=new IntersectionObserver(entries=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){
+      entry.target.classList.add("visible");
+    }
+  });
+},{threshold:.2});
 
-/* ===== HEADER BLUR ON SCROLL ===== */
+document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
+
+/* ===== HEADER BLUR ===== */
 addEventListener("scroll",()=>{
   const n=document.querySelector("nav");
   if(scrollY>40){
@@ -294,14 +307,23 @@ addEventListener("scroll",()=>{
   }
 });
 
-/* ===== NAV SCROLL WITH OFFSET ===== */
+/* ===== NAV SCROLL – TÍTULOS ALINEADOS ===== */
 document.querySelectorAll("nav span").forEach(btn=>{
   btn.addEventListener("click",()=>{
     const section=document.querySelectorAll(".section")[btn.dataset.scroll];
-    const header=document.querySelector("nav").offsetHeight;
-    const offset=40; // controla cuánto sube el título
-    const y=section.getBoundingClientRect().top + window.pageYOffset - header - offset;
-    window.scrollTo({top:y,behavior:"smooth"});
+    const title=section.querySelector("h1");
+
+    const fixedTitlePosition=160; // todos los títulos caen aquí
+
+    const targetY=
+      title.getBoundingClientRect().top +
+      window.pageYOffset -
+      fixedTitlePosition;
+
+    window.scrollTo({
+      top:targetY,
+      behavior:"smooth"
+    });
   });
 });
 
@@ -309,25 +331,31 @@ document.querySelectorAll("nav span").forEach(btn=>{
 const scene=new THREE.Scene();
 const cam=new THREE.PerspectiveCamera(60,innerWidth/innerHeight,.1,100);
 cam.position.z=4;
-const r=new THREE.WebGLRenderer({alpha:true});
-r.setSize(innerWidth,innerHeight);
-r.setPixelRatio(Math.min(devicePixelRatio,2));
-document.body.appendChild(r.domElement);
-const m=new THREE.Mesh(
+
+const renderer=new THREE.WebGLRenderer({alpha:true});
+renderer.setSize(innerWidth,innerHeight);
+renderer.setPixelRatio(Math.min(devicePixelRatio,2));
+document.body.appendChild(renderer.domElement);
+
+const mesh=new THREE.Mesh(
   new THREE.IcosahedronGeometry(1.8,2),
   new THREE.MeshStandardMaterial({wireframe:true,color:0xffffff,opacity:.05,transparent:true})
 );
-scene.add(m);
-const l=new THREE.PointLight(0xffffff,1);
-l.position.set(5,5,5);
-scene.add(l);
-(function anim3D(){
-  m.rotation.x+=.0015; m.rotation.y+=.0015;
-  r.render(scene,cam);
-  requestAnimationFrame(anim3D);
+scene.add(mesh);
+
+const light=new THREE.PointLight(0xffffff,1);
+light.position.set(5,5,5);
+scene.add(light);
+
+(function animate(){
+  mesh.rotation.x+=.0015;
+  mesh.rotation.y+=.0015;
+  renderer.render(scene,cam);
+  requestAnimationFrame(animate);
 })();
+
 onresize=()=>{
-  r.setSize(innerWidth,innerHeight);
+  renderer.setSize(innerWidth,innerHeight);
   cam.aspect=innerWidth/innerHeight;
   cam.updateProjectionMatrix();
 };
