--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@ p{
   filter:blur(0);
 }
 
-/* ===== FOOTER ===== */
+/* ===== FOOTER (ACORTADO) ===== */
 footer{
   text-align:center;
-  padding:120px 0;
-  font-size:12px;
+  padding:60px 0 40px; /* ↓ más corto */
+  font-size:11px;
   letter-spacing:.2em;
   color:#aaa;
   border-top:1px solid #1c1c1c;
