--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@ nav span{
   padding-top:4px;
 }
 
-nav span:hover{ color:#fff; }
+nav span:hover{
+  color:#fff;
+}
 
 /* ===== SECTIONS ===== */
 .section{
@@ -82,11 +84,6 @@ nav span:hover{ color:#fff; }
   justify-content:center;
   align-items:center;
   padding:120px 10% 0;
-}
-
-/* Contacto: subir título */
-.section.contact{
-  padding-top:80px; /* ↓ antes 120px */
 }
 
 /* ===== CONTENT ===== */
@@ -164,7 +161,9 @@ footer{
 <section class="section">
   <div class="content-center">
     <h1 id="heroTitle"></h1>
-    <p class="reveal">Diseño industrial con enfoque arquitectónico y precisión estructural.</p>
+    <p class="reveal">
+      Diseño industrial con enfoque arquitectónico y precisión estructural.
+    </p>
   </div>
 </section>
 
@@ -175,7 +174,7 @@ footer{
     <p class="reveal">
       Ingeniero en diseño industrial de 24 años, con base en Valencia. Formación en la
       Universitat Politècnica de València (UPV) y Universitat Jaume I (UJI), con FP en electricidad.
-      Interesado en impresión 3D aplicada al prototipado y en el diseño y desarrollo de páginas web.
+      Interesado en impresión 3D aplicada al prototipado y en la creación de páginas web.
     </p>
   </div>
 </section>
@@ -184,7 +183,9 @@ footer{
 <section class="section">
   <div class="content-left">
     <h1 class="reveal">Portfolio</h1>
-    <p class="reveal">Selección de proyectos de diseño industrial.</p>
+    <p class="reveal">
+      Selección de proyectos de diseño industrial con enfoque técnico y conceptual.
+    </p>
   </div>
 </section>
 
@@ -192,12 +193,14 @@ footer{
 <section class="section">
   <div class="content-left">
     <h1 class="reveal">CV</h1>
-    <p class="reveal">Formación académica y experiencia profesional.</p>
+    <p class="reveal">
+      Formación académica y experiencia profesional en diseño y desarrollo de producto.
+    </p>
   </div>
 </section>
 
 <!-- CONTACTO -->
-<section class="section contact">
+<section class="section">
   <div class="content-left">
     <h1 class="reveal">Contacto</h1>
     <p class="reveal">majorbori@gmail.com</p>
@@ -209,14 +212,17 @@ footer{
 <script>
 
 /* ===== ENTRADA ===== */
-window.addEventListener("load",()=>{ document.body.style.opacity="1"; });
+window.addEventListener("load",()=>{
+  document.body.style.opacity="1";
+});
 
 /* ===== CURSOR ===== */
 const cursor=document.querySelector(".cursor");
 let mx=0,my=0,x=0,y=0;
 
 addEventListener("mousemove",e=>{
-  mx=e.clientX; my=e.clientY;
+  mx=e.clientX;
+  my=e.clientY;
 });
 
 (function animateCursor(){
@@ -250,13 +256,17 @@ setTimeout(()=>{
 
 /* ===== REVEAL ===== */
 const observer=new IntersectionObserver(entries=>{
-  entries.forEach(e=>e.isIntersecting && e.target.classList.add("visible"));
+  entries.forEach(e=>{
+    if(e.isIntersecting) e.target.classList.add("visible");
+  });
 },{threshold:.2});
+
 document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
 
 /* ===== NAVIGATION ===== */
 document.querySelectorAll("nav span").forEach(btn=>{
   btn.addEventListener("click",()=>{
+
     const index=btn.dataset.scroll;
 
     if(index==="0"){
@@ -268,8 +278,10 @@ document.querySelectorAll("nav span").forEach(btn=>{
     const title=section.querySelector("h1");
 
     const offset=180;
+    const targetY=title.offsetTop-offset;
+
     window.scrollTo({
-      top:title.offsetTop-offset,
+      top:targetY,
       behavior:"smooth"
     });
   });
