--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ nav span:hover{ color:#fff; }
   padding:120px 10% 0;
 }
 
-/* Contacto: subir un poco más */
+/* Contacto más arriba */
 .section.contact{
   padding-top:60px;
 }
