--- a/index.html
+++ b/index.html
@@ -84,13 +84,18 @@ nav span:hover{ color:#fff; }
   padding:120px 10% 0;
 }
 
-/* CONTACTO — ajuste ultra fino */
+/* ===== HERO (Industrial Design) ===== */
+.section:first-of-type .content-center{
+  margin-top:-20px; /* ← SUBE UN POQUITO */
+}
+
+/* ===== CONTACTO ===== */
 .section.contact{
   padding-top:120px;
 }
 
 .section.contact .content-left{
-  margin-top:-125px; /* ← cambio mínimo */
+  margin-top:-125px;
 }
 
 /* ===== CONTENT ===== */
