--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ nav span:hover{ color:#fff; }
 
 /* ===== HERO (Industrial Design) ===== */
 .section:first-of-type .content-center{
-  margin-top:-20px; /* ← SUBE UN POQUITO */
+  margin-top:-70px; /* ↑ SUBIDO MÁS */
 }
 
 /* ===== CONTACTO ===== */
