--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@ nav span:hover{ color:#fff; }
   margin-top:-70px;
 }
 
-/* ===== CONTACTO ===== */
+/* ===== CONTACTO (subido un poco más) ===== */
 .section.contact{
   padding-top:120px;
 }
 
 .section.contact .content-left{
-  margin-top:-125px;
+  margin-top:-145px; /* ← ajuste */
 }
 
 /* ===== CONTENT ===== */
@@ -148,7 +148,7 @@ p{
 /* ===== FOOTER ===== */
 footer{
   text-align:center;
-  padding:48px 0 36px;   /* equilibrado */
+  padding:48px 0 36px;
   font-size:11px;
   letter-spacing:.18em;
   color:#cfcfcf;
