--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@ nav span:hover{ color:#fff; }
   margin-top:-70px;
 }
 
-/* ===== CONTACTO (subido un poco más) ===== */
+/* ===== CONTACTO ===== */
 .section.contact{
   padding-top:120px;
 }
 
 .section.contact .content-left{
-  margin-top:-145px; /* ← ajuste */
+  margin-top:-145px;
 }
 
 /* ===== CONTENT ===== */
@@ -213,7 +213,7 @@ footer{
 </section>
 
 <footer>
-© 2026 · Luis Blasco-Ibáñez Berbel · Ingeniero en diseño industrial y desarrollo de productos
+© 2026 · Luis Blasco-Ibáñez Berbel · Ingeniero en diseño industrial
 </footer>
 
 <script>
