--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@ nav span:hover{ color:#fff; }
   text-align:justify;
 }
 
+.about-wrapper img{
+  max-width:260px;   /* ajuste de tamaño */
+  height:auto;
+  display:block;
+}
+
 /* ===== TYPO ===== */
 h1{
   font-size:clamp(70px,6vw,120px);
